[metadata]
name = marppy
version = attr: marppy.__version__
description = Convert to and from MARP coordinates
long_description = file: README.rst, LICENSE.rst
keywords = marp, apex, magnetic coordinates
license = MIT License
author = L. Lamarche, R. Varney, A. Reimer
author_email = leslie.lamarche@sri.com
url = https://github.com/amisr/marppy
classifiers =
    Programming Language :: Python :: 3
    ; Development Status :: 2.0.0 - Release
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    ; License :: OSI Approved :: GNU General Public License (GPL)
    Natural Language :: English
    Programming Language :: Python

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    requests
    importlib-metadata; python_version<"3.8"
    numpy
    ; apexpy

[options.entry_points]
console_scripts =
    marppy = marppy.__main__:main
